# lung-cancer-ann

./: README.md  cube_test.py  cube_test2.py  input_scaler.pkl  main.py  new_cube_test.py  new_cube_test2.py  output_scaler.pkl  pyproject.toml  run.py  test.py  test3.py  test4.py  test_old.py
